tasks and add-tasks

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
   <!-- Profile Picture -->
   <div class="flex items-center gap-4">
     <img
-      src=""
+      src="assets/profilePicture.jpg"
       alt="Profile"
       class="w-10 h-10 rounded-full border border-gray-300 object-cover"
     />
