--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -10,25 +10,33 @@
       routerLink="/dashboard"
       class="flex items-center gap-3 px-4 py-2 mt-4 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
     >
-
       <span>Dashboard</span>
     </a>
     <a
-      routerLink="/tasks"
+      routerLink="/dashboard/tasks"
       routerLinkActive="bg-teal-600"
       class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
     >
       <span>Tasks</span>
     </a>
+
     <a
-      routerLink="/attendance"
+      routerLink="/dashboard/add-tasks"
+      routerLinkActive="bg-teal-600"
+      class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
+    >
+      <span>Add Tasks</span>
+    </a>
+
+    <a
+      routerLink="/dashboard/attendance"
       routerLinkActive="bg-teal-600"
       class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
     >
       <span>Attendance</span>
     </a>
     <a
-      routerLink="/profile"
+      routerLink="/dashboard/profile"
       routerLinkActive="bg-teal-600"
       class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
     >
