--- a/src/app/features/auth/login.component.html
+++ b/src/app/features/auth/login.component.html
@@ -7,7 +7,8 @@
     </h2>
 
     <!-- Form -->
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="space-y-6">
+    <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()" class="space-y-6"> -->
+      <form [formGroup]="form" class="space-y-6">
 
       <div class="flex items-center bg-gray-800 rounded-lg px-4 py-3 shadow-sm focus-within:ring-2 focus-within:ring-teal-400">
         <svg class="w-5 h-5 text-white mr-3" fill="currentColor" viewBox="0 0 20 20">
