--- a/src/app/features/dashboard/dashboards/dashboard.component.html
+++ b/src/app/features/dashboard/dashboards/dashboard.component.html
@@ -67,7 +67,7 @@
         <thead>
           <tr class="text-gray-500 text-sm">
             <th class="py-2">Employee</th>
-            <th class="py-2">Status</th>
+            <th class="py-2 w-32">Status</th>
           </tr>
         </thead>
         <tbody>
