--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -36,6 +36,13 @@
       <span>Attendance</span>
     </a>
     <a
+      routerLink="/dashboard/team-members"
+      routerLinkActive="bg-teal-600"
+      class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
+    >
+      <span>Team Members</span>
+    </a>
+    <a
       routerLink="/dashboard/profile"
       routerLinkActive="bg-teal-600"
       class="flex items-center gap-3 px-4 py-2 rounded hover:bg-teal-700 transition-colors font-semibold text-lg"
